# weather-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  __init__.py  base.py  cli.py  models.py  pyproject.toml  requirements.txt  skill.py
.github/workflows/: auto-merge-docs.yml
docs/: prd-001-unified-cli-architecture.md  provider-selection.md  tasks-001-prd-001-unified-cli-architecture.md
formatters/: __init__.py  whatsapp.py
providers/: __init__.py  au_bom.py  base.py  hko.py  nz_metservice.py  openweathermap.py  us_nws.py
senders/: base.py
tests/: test_batch1_providers.py  test_batch2_providers.py  test_bootstrap.py  test_cli_integration.py  test_cli_text_formatter.py  test_core.py  test_regional_providers.py  test_telegram_sender.py
weather/: __init__.py  bootstrap.py  cli.py  models.py  skill.py
weather/formatters/: __init__.py  cli_text.py  telegram.py  whatsapp.py
weather/providers/: __init__.py  au_bom.py  de_dwd.py  hko.py  id_bmkg.py  jma.py  kr_kma.py  nz_metservice.py  openweathermap.py  sg_nea.py  th_tmd.py  tw_cwa.py  uk_metoffice.py  us_nws.py
weather/senders/: __init__.py  base.py  telegram.py
