[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-skill"
version = "0.1.0"
description = "A platform-agnostic weather skill for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shrwnsan/weather-skill"
Repository = "https://github.com/shrwnsan/weather-skill"
Issues = "https://github.com/shrwnsan/weather-skill/issues"
Changelog = "https://github.com/shrwnsan/weather-skill/blob/main/CHANGELOG.md"

[project.scripts]
weather = "weather.cli:main"
